Fix: Fixes to the benchmark harness